--- a/_config.yml
+++ b/_config.yml
@@ -632,6 +632,7 @@ jekyll_get_json:
   - data: resume
     json: assets/json/resume.json # it can also be an url
 jsonresume:
+  - basics
   - education
   - research experience
   - astronomy outreach
