--- a/_config.yml
+++ b/_config.yml
@@ -635,8 +635,10 @@ jsonresume:
   - basics
   - education
   - research experience
+  - teaching experience
+  - employment
   - astronomy outreach
   - employment
   - publications
   - presentations
-  - honors, awards & distinctions
+  - awards, honors & certificates
