--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Research Notes # blog_name will be displayed in your blog page
-blog_description: & other thoughts
+blog_description: and other thoughts
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -641,4 +641,4 @@ jsonresume:
   - employment
   - publications
   - presentations
-  - awards, honors & certificates
+  - awards, honors and certificates
