--- a/_config.yml
+++ b/_config.yml
@@ -636,8 +636,9 @@ jsonresume:
   - education
   - research
   - teaching
-  - employment
+  - work
   - astronomy
   - publications
   - presentations
   - awards
+  - certificates
