--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Research Notes # blog_name will be displayed in your blog page
+blog_name: rachel"'"s research notes # blog_name will be displayed in your blog page
 blog_description: and other thoughts
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
