--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: rachel"'"s research notes # blog_name will be displayed in your blog page
-blog_description: and other thoughts
+blog_name: "rachel's research notes" # blog_name will be displayed in your blog page
+blog_description: "and other thoughts"
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -265,8 +265,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["stargazing"] # these tags will be displayed on the front page of your blog
+display_categories: ["public observing"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
