--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact_note: >
   Email: rachel.langgin@unlv.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Gravitational-Wave Astrophysicist
-  Second Year Graduate Astronomy Student
+  Astronomy PhD Student
 footer_text: >
 keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
@@ -64,7 +64,7 @@ max_width: 930px
 # see https://schema.org/docs/faq.html for more information
 serve_og_meta: true # Include Open Graph meta tags in the HTML head
 serve_schema_org: false # Include Schema.org in the HTML head
-og_image: /assets/img/GW_comic_1.jpg# The site-wide (default for all links) Open Graph preview image
+og_image: /assets/img/MtC_2.jpeg # The site-wide (default for all links) Open Graph preview image
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -637,6 +637,6 @@ jsonresume:
   - publications
   - work
   - volunteer
-  - projects
+  - presentations
   - awards
   - certificates
