--- a/_config.yml
+++ b/_config.yml
@@ -265,7 +265,7 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["Gravitational-Waves", "Stargazing", "Presentations", "Dark Skies"] # these tags will be displayed on the front page of your blog
+display_tags: ["Gravitational-Waves", "Stargazing", "Presentations", "Dark Skies", "Conferences"] # these tags will be displayed on the front page of your blog
 display_categories: ["Public-Observing", "Public-Outreach", "Science-Communication"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
