--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -14,12 +14,12 @@ GW_Explorer_notebooks:
   - title: "Notebook 1: Introduction to Gravitational Waves"
     filename: GW_Explorer_NB1_draft_v2.ipynb
     description: "Learn the basics of gravity, spacetime, and simulate a binary black hole merger."
-    image: "/assets/img/NB1_icon.png"
+    image: "/assets/img/NB1_icon.jpeg"
   - title: "Notebook 2: Simulating a Binary Merger"
     filename: GW_Explorer_NB2_draft_v2.ipynb
     description: "Simulate a merger of a binary neutron star and visualize the waveform."
-    image: "/assets/img/NB2_icon.png"
+    image: "/assets/img/NB2_icon.jpeg"
   - title: "Notebook 3: Parameter Estimation Basics"
     filename: GW_Explorer_NB3_draft_v2.ipynb
     description: "Explore how we infer astrophysical properties from Gravitational-Wave signals."
-    image: "/assets/img/NB3_icon.png"
+    image: "/assets/img/NB3_icon.jpeg"
