--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -7,6 +7,7 @@ repo_description_lines_max: 2
 github_repos:
   - repository: "rlanggin/Beginning_Python_Notebooks"
     description: "Intro Python tutorials"
+    image: "/assets/img/HubbleOriginal.png"
   - repository: "rlanggin/GW_Explorer_A_Beginners_Guide"
     description: "GW Explorer notebooks"
 
