--- a/_config.yml
+++ b/_config.yml
@@ -265,8 +265,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["Gravitational-Waves", "Stargazing", "Presentations", "Dark Skies", "Conferences", "Outreach", "Education", "Teaching", "Workshops"] # these tags will be displayed on the front page of your blog
-display_categories: ["Public-Observing", "Public-Outreach", "Science-Communication", "Community-Engagement"] # these categories will be displayed on the front page of your blog
+display_tags: ["Gravitational-Waves", "Stargazing", "Presentations", "Dark Skies", "Conferences", "Outreach", "Education", "Workshops"] # these tags will be displayed on the front page of your blog
+display_categories: ["Public-Observing", "Public-Outreach", "Science-Communication", "Community-Engagement", "Teaching"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
